# northwind

./: .env_example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
dlt/: loader.py  northwind.json  northwind.py
dlt/schemas/dev/main/export/: northwind.schema.yaml
dlt/schemas/dev/main/import/: northwind.schema.yaml
dlt/schemas/dev/refactor-yaml-configs/export/: northwind.schema.yaml
dlt/schemas/dev/refactor-yaml-configs/import/: northwind.schema.yaml
dlt/schemas/export/: northwind.schema.yaml
dlt/schemas/import/: northwind.schema.yaml
dlt/schemas/prod/export/: northwind.schema.yaml
dlt/schemas/prod/import/: northwind.schema.yaml
notebooks/: runner.ipynb
sqlmesh/: config.py
sqlmesh/macros/: star__list.py
sqlmesh/models/: concepts.yml  dab__hook__blueprint.py  dar__bridge__as_is.sql  dar__bridge__as_of.py  dar__bridge__blueprint.py  dar__event__blueprint.py  dar__peripheral__blueprint.sql  dar__uss__times.sql  das__raw__blueprint.py  das__raw__times.sql  das__scd__blueprint.sql  frames.yml  keysets.yml  models.yml
sqlmesh/models/dab/: dab__hook__blueprint.py
sqlmesh/models/dar/: dar__bridge__as_of.py  dar__bridge__blueprint.py  dar__event__blueprint.py  dar__peripheral__blueprint.sql  dar__uss__dates.sql  dar__uss__northwind__customer_lifetime_value.sql  dar__uss__northwind__customer_segments.py
sqlmesh/models/das/: das__raw__blueprint.py  das__raw__dates.sql  das__scd__blueprint.sql
sqlmesh/seeds/: generate_dates.py  generate_times.py
